CMF 1.3

  Bug Fixes

    - Made WorkflowTool.updateRoleMappings update security-related
      indexes.

    - Append '/' to links in skin templates to the root of the site,
      to pacify clients which won't send Basic Auth tokens because the
      path doesn't match.

    - Removed the binding of Folder and Topic types to the default
      workflow for newly-created CMFSites (Collector #4).  Note that
      existing sites will still need to remove these bindings manually,
      as indicated in the "Upgrading" section of INSTALL.txt.

    - Updated initial action reported by CMFDefault's DefaultWorkflow:
      was "joined", now "created".

    - Fix 'index_html' template to filter using 'View' permission
      (folders which were not viewable were triggering authentication,
      instead of being skipped).

    - Repair free-form subject entry on 'full_metadata_edit_form' (was
      merging all keywords onto the same line, plus soft-wrapping!)

    - Ensured that Link, File, and Image content objects reindex themselves
      after edit (wrapping 'edit' as a WorkflowMethod no longer guarantees
      that).

    - Fixed CMFCalendar's "day view" to accomodate the removal of 'title'
      metadata from catalog in favor of 'Title' (thanks to Dieter Maurer
      for pointing this out).

    - Corrected a skins performance optimization (the version as
      released in the beta did not take effect).

CMF 1.3 beta2 (2002/07/07)

  New Features

    - Changed the modification date so that it is updated at reindex
      time and does not rely anymore on bobobase_modification_time. This
      makes export+import of objects not lose the modification date.
      Before exporting objects created with an older CMF version,
      reindex the "modified" index in the catalog (you just have to do
      it once, and only if you need to export objects).

    - Made the workflow tool compute chains using type names, as well
      as instances (Tracker #441).
